--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,9 @@
       <button type="submit" name="button">Submit</button>
     </form>
 
+    <button id="fight-button" type="button" name="button">FIGHT!</button>
+    <button id="player-attack" name="button">ATTACK!</button>
+
+
   </body>
 </html>
